--- a/css/styles.css
+++ b/css/styles.css
@@ -1,35 +1,283 @@
+/********************div***********/
+.div-1 {
+  background-color: #DDDD;
+  height: 740px;
 
-body {
-  background-color: #B5EAEA;
 }
 
 
 h1 {
-  color: #39A2DB;
-  font-style: italic;
-  text-decoration: underline;
-  text-decoration-style: wavy;
-  }
-h3{
-color: #5F939A;
+  margin: 0px;
+  text-align: center;
+  position: relative;
+  font-family: "lucida handwriting",cursive;
+  padding-top: 100px;
+  font-size: 40px;
 
 }
 
-img {
-border-color:#39A2DB;
+p {
+  margin: 0;
+text-align: center;
+font-family: "lucida handwriting",cursive;
+padding-bottom: 50px;
+}
+
+body {
+  margin: 0;
+}
+
+.snow {
+width:100%;
+height: 40px;
+position:absolute;
+bottom: 40px;
+right: 0px;
+
+}
+
+
+
+
+
+.waves {
+width: 300px;
+position: relative;
+top: 642px;
+}
+
+.waves-1 {
+width: 300px;
+position: relative;
+top: 642px;
+right: 8px;
+}
+.waves-2 {
+width: 300px;
+position: relative;
+top: 642px;
+right: 16px;
+}
+.waves-3 {
+width: 300px;
+position: relative;
+top: 642px;
+right: 24px;
+}
+.waves-4 {
+width: 256px;
+height: 74px;
+position: relative;
+left: 1184px;
+top: 220px
+
+}
+.bio {
+position: relative;
+left: 75%;
+bottom: 430px;
+width: 60px;
+height: 60px;
+
+
+}
+
+.biotext {
+position: relative;
+left: 850px;
+bottom: 430px;
+margin: 10px;
+width: 540px;
+height: 300px;
+
+}
+
+
+.snowcliff {
+position: relative;
+right: 500px;
+}
+
+.me {
+width: 250px;
+height: 250px;
+border-radius: 50% 50%;
 border-style: dotted;
-border-width: 5px
-width: 100%;
+position: relative;
+top: -40px;
+left: 300px;
+}
 
 
+.span-1 {
+text-decoration: underline;
+text-decoration-style: dotted;
+
+}
+
+
+.cloud-left {
+position: relative;
+right: 55%;
+bottom: 440px;
+width: 300px;
+
+}
+
+.cloud-right-1 {
+width: 300px;
+position: relative;
+bottom: 65%;
+right: 100px;
+
+}
+
+.cloud-right-2 {
+width: 200px;
+position: relative;
+left: 80%;
+bottom: 80%;
+
+}
+
+.middle {
+  background-color: #b0d1ff;
+  width: 100%;
+  height: 700px;
+}
+
+.bottom {
+  background-color: #3C8DAD;
+  width: 100%;
+  height: 500px;
+
+}
+
+.mountain {
+  position: relative;
+left: 300px;
+display: inline;
+}
+
+.student {
+text-decoration: underline;
+text-decoration-style: solid;
+}
+
+.Mariotime {
+position: relative;
+top: 70px;
+padding-bottom: 0px;
+}
+
+.table {
+text-align: center;
+border-color: black;
+position: relative;
+left: 400px;
+top: 280px;
+
+}
+
+.Info {
+  position: relative;
+  left: 900px;
+  bottom: 200px;
+  font-family: "lucida handwriting",cursive;
+  font-size: 20px;
+  border: 5px;
+  border-style: dotted;
+  color: blue;
+
+}
+
+.hr-1 {
+ border-style: none;
+ border-color: #e15631;
+border-width: 10px;
+width: 5%;
+border-top-style: dotted;
+position: relative;
+top: 128px;
+}
+
+.ctbg {
+background-color: #b0d1ff;
+height: 750px;
+padding-top: 40px;
 
 
 
 }
-hr {
-  border-color: red;
-  border-style: none;
-  border-top-style: dotted;
-  border-width: 5px;
-  width: 5%;
+
+.ig {
+  font-size: 40px;
+  position: relative;
+  left: 430px;
+}
+
+
+.div-2 {
+height: 790px;
+margin: 0px;
+background-color: #39A2DB;
+
+
+}
+.music {
+position: relative;
+top: 300px;
+left: 0px;
+font-size: 30px;
+}
+
+.m1 {
+position: relative;
+top: -100px;
+
+}
+
+.m2 {
+
+  position: relative;
+  top: 100px;
+  right: 300px;
+}
+
+.h1-headphones {
+text-align: center;
+text-decoration: underline;
+text-decoration-style: solid;
+text-decoration-color: red;
+
+
+}
+.h2-1 {
+position: relative;
+top: 60px;
+
+
+}
+
+.h2-2 {
+  position: absolute;
+  top: 420px;
+  left: 50px;
+}
+
+.wku {
+  font-size: 20px;
+
+}
+
+.kidancing {
+  width: 200px;
+  height: 200px;
+  margin: 20px;
+}
+.carscene {
+  width: 200px;
+  height: 200px;
+  position:relative;
+  left: 635px;
 }
