--- a/css/styles.css
+++ b/css/styles.css
@@ -2,29 +2,35 @@
 .div-1 {
   background-color: #DDDD;
   height: 740px;
-
+  position: relative;
+  width: 100%;
 }
 
 
 h1 {
   margin: 0px;
-  text-align: center;
-  position: relative;
+  position: absolute;
   font-family: "lucida handwriting",cursive;
   padding-top: 100px;
   font-size: 40px;
+  right: 43%;
+top: -50px;
 
 }
 
 p {
   margin: 0;
-text-align: center;
 font-family: "lucida handwriting",cursive;
 padding-bottom: 50px;
+position: absolute;
+right: 50%;
+top: 20%;
+
 }
 
 body {
   margin: 0;
+
 }
 
 .snow {
@@ -33,6 +39,7 @@ height: 40px;
 position:absolute;
 bottom: 40px;
 right: 0px;
+top: 700px;
 
 }
 
@@ -42,40 +49,40 @@ right: 0px;
 
 .waves {
 width: 300px;
-position: relative;
+position: absolute;
 top: 642px;
 }
 
 .waves-1 {
 width: 300px;
-position: relative;
+position: absolute;
 top: 642px;
-right: 8px;
+right: 58.6%;
 }
 .waves-2 {
 width: 300px;
-position: relative;
+position: absolute;
 top: 642px;
-right: 16px;
+right: 38.1%;
 }
 .waves-3 {
 width: 300px;
-position: relative;
+position: absolute;
 top: 642px;
-right: 24px;
+right: 17.6%;
 }
 .waves-4 {
 width: 256px;
 height: 74px;
-position: relative;
-left: 1184px;
-top: 220px
+position: absolute;
+right: 1px;
+top: 637px;
 
 }
 .bio {
-position: relative;
-left: 75%;
-bottom: 430px;
+position: absolute;
+left: 70%;
+top: 80px;
 width: 60px;
 height: 60px;
 
@@ -83,9 +90,9 @@ height: 60px;
 }
 
 .biotext {
-position: relative;
-left: 850px;
-bottom: 430px;
+position: absolute;
+right:0%;
+top: 250px;
 margin: 10px;
 width: 540px;
 height: 300px;
@@ -94,19 +101,11 @@ height: 300px;
 
 
 .snowcliff {
-position: relative;
-right: 500px;
+position: absolute;
+right: 65%;
+top: 100px;
 }
 
-.me {
-width: 250px;
-height: 250px;
-border-radius: 50% 50%;
-border-style: dotted;
-position: relative;
-top: -40px;
-left: 300px;
-}
 
 
 .span-1 {
@@ -118,25 +117,23 @@ text-decoration-style: dotted;
 
 .cloud-left {
 position: relative;
-right: 55%;
-bottom: 440px;
+top: 100px;
+left: 40px;
 width: 300px;
 
 }
 
 .cloud-right-1 {
 width: 300px;
-position: relative;
-bottom: 65%;
-right: 100px;
-
+position: absolute;
+right: 20%
 }
 
 .cloud-right-2 {
 width: 200px;
-position: relative;
-left: 80%;
-bottom: 80%;
+position: absolute;
+top:  20%;
+right: 10%;
 
 }
 
@@ -144,19 +141,32 @@ bottom: 80%;
   background-color: #b0d1ff;
   width: 100%;
   height: 700px;
+  position: relative;
 }
 
 .bottom {
   background-color: #3C8DAD;
   width: 100%;
   height: 500px;
-
+position: relative;
+}
+.end{
+width: 100%;
+height: 50px;
 }
 
+.mytag {
+margin: 0%;
+padding: 0%;
+top: 1950px;
+right: 34%;
+
+}
 .mountain {
-  position: relative;
+  position: absolute;
 left: 300px;
 display: inline;
+top: 230px;
 }
 
 .student {
@@ -165,7 +175,7 @@ text-decoration-style: solid;
 }
 
 .Mariotime {
-position: relative;
+position: absolute;
 top: 70px;
 padding-bottom: 0px;
 }
@@ -173,22 +183,21 @@ padding-bottom: 0px;
 .table {
 text-align: center;
 border-color: black;
-position: relative;
+position: absolute;
 left: 400px;
-top: 280px;
+bottom: 200px;
 
 }
 
 .Info {
-  position: relative;
-  left: 900px;
-  bottom: 200px;
+  position: absolute;
   font-family: "lucida handwriting",cursive;
   font-size: 20px;
   border: 5px;
   border-style: dotted;
   color: blue;
-
+top: 230px;
+right: 10%;
 }
 
 .hr-1 {
@@ -197,14 +206,17 @@ top: 280px;
 border-width: 10px;
 width: 5%;
 border-top-style: dotted;
-position: relative;
-top: 128px;
+position: absolute;
+bottom: -12px;
+left: 47%;
 }
 
 .ctbg {
 background-color: #b0d1ff;
 height: 750px;
+width: 100%;
 padding-top: 40px;
+position: absolute;
 
 
 
@@ -212,7 +224,7 @@ padding-top: 40px;
 
 .ig {
   font-size: 40px;
-  position: relative;
+  position: absolute;
   left: 430px;
 }
 
@@ -221,31 +233,33 @@ padding-top: 40px;
 height: 790px;
 margin: 0px;
 background-color: #39A2DB;
+position: relative;
 
 
 }
 .music {
 position: relative;
 top: 300px;
-left: 0px;
+left: 40%;
 font-size: 30px;
 }
 
 .m1 {
-position: relative;
-top: -100px;
-
+position: absolute;
+left: 0px;
+top: 65%;
 }
 
 .m2 {
 
-  position: relative;
-  top: 100px;
-  right: 300px;
+  position: absolute;
+  top: 17%;
+  left: 0%;
 }
 
 .h1-headphones {
-text-align: center;
+position: absolute;
+right: 35%;
 text-decoration: underline;
 text-decoration-style: solid;
 text-decoration-color: red;
@@ -253,7 +267,7 @@ text-decoration-color: red;
 
 }
 .h2-1 {
-position: relative;
+position: absolute;
 top: 60px;
 
 
@@ -274,10 +288,14 @@ top: 60px;
   width: 200px;
   height: 200px;
   margin: 20px;
+  position: absolute;
+  left: 42%;
+  top: 30%;
 }
 .carscene {
   width: 200px;
   height: 200px;
-  position:relative;
-  left: 635px;
+  position: absolute;
+  left: 43.5%;
+  top: 60%;
 }
